# daily-stock

./: .dockerignore  .env_example  .gitignore  README.md  dependency-cruiser.config.cjs  docker-compose.yml  lint-staged.config.cjs  package-lock.json  package.json  prettier.config.cjs
.github/workflows/: ci.yml
.husky/: pre-commit
backend/: .coverage  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  ocr.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  user.py
backend/app/repositories/: __init__.py  init_db.py  user_repository.py
backend/app/schemas/: __init__.py  auth.py  receipt.py
backend/app/services/: auth_service.py  ocr_service.py
backend/daily_stock_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: check_layers.py  run_architecture_check.sh  run_backend_checks.sh  run_formatter.sh  run_mypy.sh  run_pytest.sh  run_ruff.sh
backend/tests/: test_auth_service.py
frontend/: Dockerfile  eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/features/auth/application/: LoginForm.tsx  RegisterForm.tsx  useAuthMutations.ts
frontend/src/pages/home/: index.tsx
frontend/src/pages/items/: index.tsx
frontend/src/pages/login/: index.tsx
frontend/src/pages/purchase/: index.tsx
frontend/src/shared/utils/: formatters.ts  queryClient.ts
(+16 files in other folders)
